<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">绿芽记账</string>
    <string name="login_button_text">登录</string>
    <string name="register_button_text">注册</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="remember_me">记住我</string>
    <string name="no_account_text">还没有账号？</string>
    <string name="has_account_text">已有账号？</string>
    <string name="title_home">首页</string>
    <string name="title_calendar">日历</string>
    <string name="title_add">添加</string>
    <string name="title_report">报表</string>
    <string name="title_profile">我的</string>
    <string name="add_bill">添加账单</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="default_budget_text">暂无预算</string>
    
    <!-- 记账方式 -->
    <string name="manual_billing">手动记账</string>
    <string name="screenshot_billing">截图记账</string>
    <string name="text_billing">文字记账</string>
</resources>